force-app/main/objects/KB_CaseCountryCodeAndAssignmentEmails__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To have country code, help desk assignments,and the respective emails for Technical Support</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Display_Order__c</fullName>
        <label>Country Display Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Help_Desk_Email__c</fullName>
        <label>Help Desk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ISO2__c</fullName>
        <label>ISO2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO3__c</fullName>
        <label>ISO3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Code__c</fullName>
        <label>Telephone Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KB_CaseCountryCodeAndAssignmentEmails</label>
    <listViews>
        <fullName>All_Country_List</fullName>
        <columns>NAME</columns>
        <columns>Country_Display_Order__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Help_Desk_Email__c</columns>
        <columns>Telephone_Code__c</columns>
        <columns>ISO2__c</columns>
        <columns>ISO3__c</columns>
        <columns>Language__c</columns>
        <columns>Channel__c</columns>
        <columns>Platform__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Country List</label>
        <language>en_US</language>
    </listViews>
</CustomObject>